# west_nile_virus_prediction

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/:  Exploratory_data_analysis.ipynb  1. Exploratory_data_analysis.ipynb  12_log_regr.ipynb  2. Cleaning_weather_data.ipynb  2. Data preprocessing.ipynb  3. Aggregate_weather_data.ipynb  3. Feature engineering.ipynb  4. Feature engineering.ipynb  4. Model selection.ipynb  5. Evaluation.ipynb  Baseline_model.ipynb  EDA.ipynb  clean_weather_data.ipynb  exploratory_data_analysis.ipynb  feature_engineering.ipynb  multirows.ipynb  simple_baseline.ipynb  train-test_2y-2y.ipynb
scripts/: data_preprocessing_pipeline.py  feature_pipeline.py  features_pipeline.py  run_experiment.py  training_pipeline.py
src/: config.py  data.py  evaluate.py  feature_selector.py  features.py  main.py  mlflow_utils.py  paths.py  pipeline.py  resampling.py  training.py
