[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Aga <agazgo.ml@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^2.1.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
xgboost = "^2.1.1"
lightgbm = "^4.5.0"
pyarrow = "^17.0.0"
kaggle = "^1.6.17"
ray = {extras = ["tune"], version = "^2.35.0"}
ipywidgets = "^8.1.5"
optuna = "^4.0.0"
pudb = "^2024.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
